--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body{
     font-family: "Gabarito", serif;
+    
 }
 .navbar{
     padding: 10;
@@ -82,6 +83,14 @@ body{
     background-color: #A435F0;
     color: white;
     padding: 10px;
+    cursor: pointer;
+    border: solid black 1px;
+}
+
+.Categories p:hover{
+    background-color: greenyellow;
+    transition: 1s;
+    color: black;
 }
 
 .Sale-image{
@@ -101,8 +110,26 @@ body{
     position: absolute;
     top: 10%;
     left: 25%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    cursor: pointer;
     
 }
+@keyframes zoom{
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+
 
 
 
