--- a/style.css
+++ b/style.css
@@ -141,10 +141,9 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin top: 10px;
+    margin-top: 10px;
     
-    
-}
+    }
 
 .course-card{
     width: 200px;
