updated media queries

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ body{
     align-items: center;
 }
 
+.navbar__s4{
+    display: none;
+}
+
 /*My learning pop up*/
 .mylearning{
     position: relative;
@@ -146,7 +150,9 @@ body{
     }
 
 .course-card{
-    width: 200px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .course-card img{
@@ -217,5 +223,32 @@ body{
     background-color: black;
     color: white;
     padding: 20px;
+    
+}
+
+/* media queries*/
+
+@media screen and (max-width:800px) {
+    .body{
+        font-size: 8px;
+    }
+    
+}
+@media screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+        
+    }
+
+    .Categories{
+        display: none;
+    }
+
+    .navbar__s3,.navbar__s2{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+    }
     
 }
